--- a/_posts/2016-04-07-13_PDEs.md
+++ b/_posts/2016-04-07-13_PDEs.md
@@ -52,12 +52,12 @@ We will look at various [finite difference]({{site.baseurl}}{% post_url 2016-02-
 
 ## Class material
 
-1. [13_PDEs-1.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs.ipynb):
+1. [13_PDEs-1.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1.ipynb):
    Poisson's and Laplace's equation: Background
    ([board notes on PDEs (PDF)]({{site.resources.fileurl}}/13_PDEs/13_PDEs-1-LectureNotes.pdf)),
    Gauss-Seidel algorithm, problems:
    [13_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1-Students.ipynb)
-2. [13_PDEs-2.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs.ipynb):
+2. [13_PDEs-2.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-2.ipynb):
    fast Jacobi, Gauss-Seidel and Successive Over Relaxation algorithms
    (using NumPy array operations, see
    [board notes on numpyfied Poisson solvers (PDF)]({{site.resources.fileurl}}/13_PDEs/13_PDEs-2-LectureNotes.pdf)),
