Summary post: added logo

--- a/_posts/2016-05-06-Summary.md
+++ b/_posts/2016-05-06-Summary.md
@@ -9,4 +9,12 @@ feedback) but finally getting an algorithm to work and a test to pass
 instilled a sense of having acquired new tools for the future that
 will allow them to solve problems on their own.
 
-If you just came here, have a look at the [Overview]({{site.baseurl}}/overview/).
+# Overview over the course
+
+* If you just came here, have a look at the [Overview]({{site.baseurl}}/overview/).
+* If you are interested in taking the class at Arizona State
+  University, go to the
+  [ASU PHY494 Course Page](http://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics).
+
+![ASU PHY 494]({{site.baseurl}}/{{site.figs}}/phy494logo.png)
+
