--- a/_posts/2017-01-12-01_Unix_Shell.md
+++ b/_posts/2017-01-12-01_Unix_Shell.md
@@ -15,10 +15,12 @@ and the [Software Carpentry lesson on The Unix
 Shell](http://swcarpentry.github.io/shell-novice/).
 
 1. [Background and Motivation](#background-and-motivation)
-2. [Tutorial](#tutorial)
+2. [Introductory Shell Tutorial](#introductory-shell-tutorial) on basic shell usage
     * [Accessing the shell](#accessing-the-shell)
     * [Navigating Files and Directories](#navigating-files-and-directories)
+	* [Creating directories and files](#creating-directories-and-files)
 	* [Copy, rename, delete](#copy-rename-delete)
+3. [Intermediate level](#intermediate-level) (optional)
 	* [Pipes and Filters](#pipes-and-filters)
 	* [Using `git` to get data for the class](#using-git-to-get-data-for-the-class)
 	* [Shell scripts](#shell-scripts)
@@ -52,7 +54,7 @@ ways, and automating tasks. On a
 (typically used for high-performance computing) using the shell is a
 very powerful (and essential) way to interact with the computer.
 
-# Tutorial
+# Introductory Shell Tutorial
 
 ## Accessing the shell
 
@@ -136,7 +138,13 @@ Paths starting with `/` are called *absolute paths*; anything else is
 a *relative* path, starting from the current working directory (check
 with `pwd`).
 
-### Moving around
+Special directory names:
+
+* `.`  is the current directory (e.g., `./Documents`)
+* `..` is the parent directory (e.g., `../../Users/dvader/..`)
+* `~` is the home directory (only when leading the path, e.g., `~/Documents`)
+
+### Location in the files system: `pwd`
 
 Assume user dvader has the following directory layout in his *home
 directory* `/Users/dvader`:
@@ -149,17 +157,64 @@ directory* `/Users/dvader`:
 			       electrical_bill.dat
 		      work/
 	     data/
-		 planets.dat
-		 bases
+		      planets.dat
+		      bases
 ~~~
-                      
+
+When logs in he starts in his home directory, `/Users/dvader`. He can
+run `pwd` to "print the working directory":
+
+{% highlight bash %}
+pwd
+{% endhighlight %}
+
+which shows `/Users/dvader`.
+
+#### Activity: Find Your Home
+
+* Open Terminal
+* Type
+
+  {% highlight bash %}
+  pwd
+  {% endhighlight %}
+
+  and hit enter. Note the directory name: this is your home directory.
+
+
+### Listing file system contents: `ls`
+
+If he executes `ls` ("list") he will see something like
+
+~~~
+Documents
+data
+~~~
+{: .output}
+
+#### Activity: List Your Home directory
+
+* open a terminal (or use the open terminal from the last exercise)
+* Type
+
+  {% highlight bash %}
+  ls
+  {% endhighlight %}
+
+* Compare the files that you see with those of your neighbor.
+
+
+
+
+### Moving around the file system: `cd`
+
 If he executes the `cd` command
 
 {% highlight bash %}
 cd /Users/dvader/Documents/deathstar
 {% endhighlight %}
 
-then he will have moved to the `deathstar` directory.
+then he will have moved to the `deathstar` directory (confirm with `pwd`!).
 
 The `cd` command took an *argument*, the directory to go to.
 
@@ -173,6 +228,7 @@ will print
 /Users/dvader/Documents/deathstar
 ~~~
 {: .output}
+
 
 If he runs
 
@@ -237,15 +293,12 @@ are understood by all commands.
   ~/Documents` is equivalent to `cd /Users/dvader/Documents`.
 
 
-## Copy, rename, delete
+## Creating directories and files
 
 ### Commands
 
 * `mkdir` (make directory)
-* `cp` (copy file, `cp -r` copy recursively, including directories)
-* `mv` (move, i.e. rename)
-* `rmdir` (remove empty directory)
-* `rm` (remove file, `rm -r` remove recursively (**dangerous!**))
+* your editor of choice
 
 ### Directory structure for the class
 
@@ -275,7 +328,7 @@ Note:
 
 ### Creating text files with a text editor
 
-Run `nano`:
+Run `nano` [^1]: 
 {% highlight bash %}
 nano
 {% endhighlight %}
@@ -285,10 +338,12 @@ You should see something like this:
 ![Nano screenshot]({{site.baseurl}}/{{site.figs}}/nano.png)
 
 (Note: for real work use a more powerful editor such as
-[Emacs](http://www.gnu.org/software/emacs/) or
+[Emacs](http://www.gnu.org/software/emacs/),
 [Vim](http://www.vim.org/) (both of which come with a steep learning
 curve), or a graphical editor such as
-[Gedit](http://projects.gnome.org/gedit/). On Windows, a free editor is
+[Gedit](http://projects.gnome.org/gedit/),
+[Sublime Text](https://www.sublimetext.com/) or
+[Atom](https://atom.io/). On Windows, a free editor is
 [Notepad++](http://notepad-plus-plus.org/).)
 
 Create a todo list with content
@@ -301,7 +356,34 @@ Create a todo list with content
 Save it to file 'TODO' with the command `^O` and type the file name
 `TODO` and exit with `^X`. Check that the file is there with `ls`.
 
-### Activity
+You can re-open the file from the command line:
+
+{% highlight bash %}
+nano TODO
+{% endhighlight %}
+
+
+
+
+## Copy, rename, delete
+
+* `cp` (copy file, `cp -r` copy recursively, including directories)
+* `mv` (move, i.e. rename, also to another directory)
+* `rmdir` (remove empty directory)
+* `rm` (remove file, `rm -r` remove recursively (**dangerous!**))
+
+  **WARNING: There is no "Trashcan" or built in backup. Once you `rm`
+something, it is gone.** Be especially careful with `rm -r`.
+
+  **WARNING: Do not execute `rm -rf *`. It will erase everything permanently.**
+
+Note: all these commands can also work on multiple filenames.
+
+
+### Activity (optional)
+
+This is a more extended exercise in using various shell commands. For
+today, this is optional, but you are encouraged to do it.
 
 1. Make a backup (call it `TODO.bak`) of the TODO list with the `cp`
    command.
@@ -344,10 +426,11 @@ Save it to file 'TODO' with the command `^O` and type the file name
 10. Move `work/notes/hints.txt` into the `work` directory.
 11. Remove the useless `work/notes` directory with `rm -r` (careful !)
 
-**WARNING: There is no "Trashcan" or built in backup. Once you `rm`
-something, it is gone.** Be especially careful with `rm -r`.
 
-Note: all these commands can also work on multiple filenames.
+# Intermediate Level
+
+The following is very useful but for right now not essential and is
+optional. You can work through the tutorial in your own time.
 
 ## Pipes and Filters
 
@@ -371,7 +454,7 @@ and special shell characters
 
 ### Working with redirection and command pipelines
 
-Download [planets.dat]({{site.baseurl}}/{{site.data}}/planets.dat)[^1]
+Download [planets.dat]({{site.baseurl}}/{{site.data}}/planets.dat)[^2]
 and put it in the directory `data/`. You can do this with your web
 browser or if you have the `curl` program installed, try
 
@@ -634,7 +717,24 @@ Updated resources in /Users/oliver/PHY494-resources
 
 #### Footnotes ####
 
-[^1]:
+[^1]: 
+
+    **Upgrading nano**: If you are using `nano` then you want to
+    enable a few useful features including syntax highlighting. The
+    easiest way is to download the config files as the zip file
+    [nanoconfig.zip]({{site.baseurl}}/{{site.siteresources}}/nanoconfig.zip)
+    and unpack them in your home directory (`curl` can be used to
+    download a file directly instead of having to use the browser):
+
+        cd 
+        curl {{site.url}}{{site.baseurl}}/{{site.siteresources}}/nanoconfig.zip -O
+        unzip nanoconfig.zip
+
+	This should create the files `~/.nanorc` (which you can edit to
+	customize further) and the directory `~/.nano`.
+
+
+[^2]:
 
 	Star Wars data courtesy of [SWAPI](https://swapi.co/). See
 	[PHY494-auxilliary/star_wars](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-auxilliary/tree/master/star_wars)
