finalized 01 Shell and small 02 Python intro

--- a/_posts/2017-01-12-01_Unix_Shell.md
+++ b/_posts/2017-01-12-01_Unix_Shell.md
@@ -214,9 +214,7 @@ If he executes the `cd` command
 cd /Users/dvader/Documents/deathstar
 {% endhighlight %}
 
-then he will have moved to the `deathstar` directory (confirm with `pwd`!).
-
-The `cd` command took an *argument*, the directory to go to.
+then he will have moved to the `deathstar` directory; confirm with `pwd`!:
 
 {% highlight bash %}
 pwd
@@ -243,6 +241,39 @@ electrical_bill.dat  weaknesses.pdf
 ~~~
 {: .output}
 
+The `cd` command took an *argument*, the directory to go to.
+
+
+#### Activity: Going up
+
+* Go to the parent directory of your home dir:
+
+  {% highlight bash %}
+  cd ..
+  {% endhighlight %}
+
+* List the contents
+
+  {% highlight bash %}
+  ls
+  {% endhighlight %}
+
+
+#### Activity: Going Home
+
+* Type
+
+  {% highlight bash %}
+  cd
+  {% endhighlight %}
+
+* Where are you now?
+
+#### More on `cd`
+
+The command `cd` on its own always returns you to your home
+directory. (It is equivalent to `cd ~`.)
+
 In order to get to the `data` directory he could use the command `cd
 /Users/dvader/data` but instead he uses the *special directory* `..`
 (which means "the directory above this one"):
@@ -251,12 +282,34 @@ In order to get to the `data` directory he could use the command `cd
 cd ../../data
 {% endhighlight %}
 
-(Use the `TAB` key while typing: *autocompletion* is one of the best
-features of the shell! The other great interactive feature is the
-history: try using the cursor-up and -down keys.)
-
 A second special directory is `.` ("this directory"). `.` and `..`
 are understood by all commands.
+
+#### Autocompletion
+
+* Use the `TAB` key while typing: *autocompletion* is one of the best
+  features of the shell!
+* The other great interactive feature is the *history*: try using the
+  cursor-up and -down keys.
+
+#### Error messages
+
+Unix commands are terse: If everything works, they say nothing. If
+they fail, you get a short (sometimes cryptic) error message.
+
+Try
+
+{% highlight bash %}
+cd bogus
+{% endhighlight %}
+
+This gives
+
+~~~~~
+bash: cd: bogus: No such file or directory
+~~~~~
+
+**Always read error messages!**
 
 ### Activity
 
@@ -265,9 +318,8 @@ are understood by all commands.
         cd
         ls -a
 
-2. Go to the `bin` directory that is located in the `usr` directory,
-   which itself is located in the root directory. List the files
-   there. Did you find "nano" and "grep"?
+2. Go to the `bin` directory that is located in the root directory. List the files
+   there. Did you find "nano" and "grep"? If not, look into `/usr/bin` 
 3. What does `ls -R /usr` show? (Try `^C`...)
 4. Try other options of `ls` such as `-sh` or `-sha`. --- ask `ls` for
    help!
@@ -316,7 +368,7 @@ Note:
 
 * *Avoid spaces and most special characters in file names.* All
   letters and numbers together with underscore `_`, minus sign `-`,
-  and period `.` are ok.
+  and period `.` are ok.[^1]
 * Plain `mkdir` cannot create multiple directories deep in one go
   unless you have the `-p` option (check!).
 
@@ -328,7 +380,7 @@ Note:
 
 ### Creating text files with a text editor
 
-Run `nano` [^1]: 
+Run `nano` [^2]: 
 {% highlight bash %}
 nano
 {% endhighlight %}
@@ -363,6 +415,22 @@ nano TODO
 {% endhighlight %}
 
 
+#### Activity: create a file with your editor
+
+* Create a file `~/PHY494/Documents/work/lesson.txt` with three
+  lessons from today:
+
+	  1. computers are tools
+	  2. the shell is powerfull
+	  3. basic shell commands: pwd, cd, ls
+
+* save the file and check that it is there with
+
+  {% highlight bash %}
+  ls -l ~/PHY494/Documents/work/lesson.txt
+  {% endhighlight %}
+
+* Open the file again and add a 4th lesson regarding file editing.
 
 
 ## Copy, rename, delete
@@ -454,7 +522,7 @@ and special shell characters
 
 ### Working with redirection and command pipelines
 
-Download [planets.dat]({{site.baseurl}}/{{site.data}}/planets.dat)[^2]
+Download [planets.dat]({{site.baseurl}}/{{site.data}}/planets.dat)[^3]
 and put it in the directory `data/`. You can do this with your web
 browser or if you have the `curl` program installed, try
 
@@ -717,7 +785,16 @@ Updated resources in /Users/oliver/PHY494-resources
 
 #### Footnotes ####
 
-[^1]: 
+[^1]:
+
+    If you *must* need spaces then enclose the string in single or
+    double quotes, e.g., `'/c/Program Files/'` or `"/c/Program
+    Files"`. Double quotes admit shell variable expansions, single
+    quotes do not. Note that a tilde `~` within quotes will *not*
+    expand to the home directory!
+
+
+[^2]: 
 
     **Upgrading nano**: If you are using `nano` then you want to
     enable a few useful features including syntax highlighting. The
@@ -733,8 +810,7 @@ Updated resources in /Users/oliver/PHY494-resources
 	This should create the files `~/.nanorc` (which you can edit to
 	customize further) and the directory `~/.nano`.
 
-
-[^2]:
+[^3]:
 
 	Star Wars data courtesy of [SWAPI](https://swapi.co/). See
 	[PHY494-auxilliary/star_wars](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-auxilliary/tree/master/star_wars)
