added ipython to 02 lesson (and updated date)

--- a/_posts/2017-01-16-02_HelloWorld.md
+++ b/_posts/2017-01-16-02_HelloWorld.md
@@ -94,3 +94,17 @@ plt.show()
 You should create a graph similar to the following:
 
 ![Constant accelleration plot]({{site.baseurl}}/{{site.figs}}/motion.png)
+
+# Interactive Python with `ipython`
+
+The [ipython](http://ipython.org) interpreter is like Python but with
+*lots* of improvements such as `TAB`-completion, help with `command?`
+(one question mark directly following a command) and source code with
+`command??` (two question marks), commandline history, and many
+additional shell-like commands (so-called "magic" commands such as
+`%cd`, `%ls`, `%pwd`, `%run`, `%time` and `%timeit` --- see `%magic`
+for help).
+
+To exit, give the `exit()` command or `^D` (`Control` + `D`).
+
+Just use `ipython` instead of `python` for interactive work.
