02: added foot note on using point and click editors: how to find the directory

--- a/_posts/2017-01-16-02_HelloWorld.md
+++ b/_posts/2017-01-16-02_HelloWorld.md
@@ -13,7 +13,8 @@ cd ~/PHY494/02_python
 
 # Hello World
 
-Using you favorite editor, create a text file named `hello.py` with the
+Using you favorite editor, create a text file named `hello.py` in the
+directory `~/PHY494/02_python`[^1] with the
 following content:
 
 {% highlight python %}
@@ -31,8 +32,9 @@ python hello.py
 
 # Python interpreter
 
-Python is an interpreted language; you can think of `python` reading
-each line in an input file and executing it. Start `python`
+[Python](https://www.python.org/) is an interpreted language; you can
+think of `python` reading each line in an input file and executing
+it. Start `python` on its own:
 
 {% highlight bash %}
 python
@@ -97,10 +99,10 @@ You should create a graph similar to the following:
 
 # Interactive Python with `ipython`
 
-The [ipython](http://ipython.org) interpreter is like Python but with
+The [ipython](http://ipython.org) interpreter is like `python` but with
 *lots* of improvements such as `TAB`-completion, help with `command?`
 (one question mark directly following a command) and source code with
-`command??` (two question marks), commandline history, and many
+`command??` (two question marks), command line history, and many
 additional shell-like commands (so-called "magic" commands such as
 `%cd`, `%ls`, `%pwd`, `%run`, `%time` and `%timeit` --- see `%magic`
 for help).
@@ -108,3 +110,45 @@ for help).
 To exit, give the `exit()` command or `^D` (`Control` + `D`).
 
 Just use `ipython` instead of `python` for interactive work.
+
+
+------------------------------------------------------------
+
+#### Footnotes ####
+
+[^1]:
+
+    If you can call your editor from the command line then this is as
+    easy as, for example with `nano` (or `vi`),
+
+         cd ~/PHY494/02_python
+	     nano hello.py
+
+    This will open a new file with name `hello.py` or open an existing
+    file if it is present.
+
+    However, if you use an editor that you have to open from, say, the
+    Windows Start menu, then you need to first open the editor and
+    then use a menu command such as *File → New* to create a blank
+    document (use or *File → Open* to open an existing file). Once you
+    have written content you need to *save it in the correct location*
+    (usually, or *File → Save*). To find the `02_python` directory,
+    first navigate to your home directory:
+
+	* This can be tricky on **Windows** : In your shell (not in your
+      editor), type `cd; pwd` to learn the path to your home
+      directory. In your editor's file system dialog window, start
+      from the system disk (normally `C:` under *Computer*) and look
+      for `C:\Users\YOUR_USERNAME`.
+
+	* On Apple **Mac OS X**, your home directory is
+      `/Users/YOUR_USERNAME`.
+
+	* On typical **Linux** distributions it is `/home/YOUR_USERNAME`.
+	
+    In your home directory, locate the `PHY494` folder, click on it to
+    find the `02_python` folder inside and click on the
+    latter. Provide the file name ("hello.py") and save the file. (In
+    the shell, make sure that the file is in place where you expect it
+    to be, i.e., `ls -la`.)
+    
