adjusted AnchorJS to only decorate h2 - h6
Note: all posts should start with h2, h1 is the auto-generated title

--- a/_posts/2017-01-12-01_Unix_Shell.md
+++ b/_posts/2017-01-12-01_Unix_Shell.md
@@ -25,7 +25,7 @@ Shell](http://swcarpentry.github.io/shell-novice/).
 	* [Using `git` to get data for the class](#using-git-to-get-data-for-the-class)
 	* [Shell scripts](#shell-scripts)
 
-# Background and Motivation
+## Background and Motivation ##
 
 As a computational scientist you have one primary tool at your hand: a
 computer. And like an experimental scientist, you will have to be able
@@ -54,9 +54,9 @@ ways, and automating tasks. On a
 (typically used for high-performance computing) using the shell is a
 very powerful (and essential) way to interact with the computer.
 
-# Introductory Shell Tutorial
+## Introductory Shell Tutorial ##
 
-## Accessing the shell
+### Accessing the shell ###
 
 * On a typical **Linux** system you open an application called
   *terminal* or *xterm* or *kterm* (or similar).
@@ -99,9 +99,10 @@ and hit enter to begin the lesson. From now on, input will just be
 shown and you should enter it.
 
 
-## Navigating Files and Directories
+### Navigating Files and Directories ###
 
-### Commands
+#### Commands ####
+
 * `pwd` (print working directory)
 * `ls` (list directory)
 * `cd` (change directory)
@@ -122,7 +123,7 @@ use services on the web such as the
 
 
 
-### Paths
+#### Paths ####
 
 A *path* consists of *directory names* separated by forward-slashes
 "`/`" and possibly a final *file name*. 
@@ -144,7 +145,7 @@ Special directory names:
 * `..` is the parent directory (e.g., `../../Users/dvader/..`)
 * `~` is the home directory (only when leading the path, e.g., `~/Documents`)
 
-### Location in the files system: `pwd`
+#### Location in the files system: `pwd` ####
 
 Assume user dvader has the following directory layout in his *home
 directory* `/Users/dvader`:
@@ -170,7 +171,7 @@ pwd
 
 which shows `/Users/dvader`.
 
-#### Activity: Find Your Home
+##### Activity: Find Your Home #####
 
 * Open Terminal
 * Type
@@ -182,7 +183,7 @@ which shows `/Users/dvader`.
   and hit enter. Note the directory name: this is your home directory.
 
 
-### Listing file system contents: `ls`
+#### Listing file system contents: `ls` ####
 
 If he executes `ls` ("list") he will see something like
 
@@ -192,7 +193,7 @@ data
 ~~~
 {: .output}
 
-#### Activity: List Your Home directory
+##### Activity: List Your Home directory #####
 
 * open a terminal (or use the open terminal from the last exercise)
 * Type
@@ -204,9 +205,7 @@ data
 * Compare the files that you see with those of your neighbor.
 
 
-
-
-### Moving around the file system: `cd`
+#### Moving around the file system: `cd` ####
 
 If he executes the `cd` command
 
@@ -244,7 +243,7 @@ electrical_bill.dat  weaknesses.pdf
 The `cd` command took an *argument*, the directory to go to.
 
 
-#### Activity: Going up
+##### Activity: Going up #####
 
 * Go to the parent directory of your home dir:
 
@@ -259,7 +258,7 @@ The `cd` command took an *argument*, the directory to go to.
   {% endhighlight %}
 
 
-#### Activity: Going Home
+##### Activity: Going Home #####
 
 * Type
 
@@ -269,7 +268,7 @@ The `cd` command took an *argument*, the directory to go to.
 
 * Where are you now?
 
-#### More on `cd`
+##### More on `cd` #####
 
 The command `cd` on its own always returns you to your home
 directory. (It is equivalent to `cd ~`.)
@@ -285,14 +284,14 @@ cd ../../data
 A second special directory is `.` ("this directory"). `.` and `..`
 are understood by all commands.
 
-#### Autocompletion
+##### Autocompletion #####
 
 * Use the `TAB` key while typing: *autocompletion* is one of the best
   features of the shell!
 * The other great interactive feature is the *history*: try using the
   cursor-up and -down keys.
 
-#### Error messages
+##### Error messages #####
 
 Unix commands are terse: If everything works, they say nothing. If
 they fail, you get a short (sometimes cryptic) error message.
@@ -311,7 +310,7 @@ bash: cd: bogus: No such file or directory
 
 **Always read error messages!**
 
-### Activity
+#### Activity ####
 
 1. What does the following sequence of commands show?
 
@@ -328,7 +327,7 @@ bash: cd: bogus: No such file or directory
 
 
 
-### Tips to make your life easy
+#### Tips to make your life easy ####
 
 * Use the shell's convenience features:
   * `TAB` completion 
@@ -345,14 +344,14 @@ bash: cd: bogus: No such file or directory
   ~/Documents` is equivalent to `cd /Users/dvader/Documents`.
 
 
-## Creating directories and files
+### Creating directories and files ###
 
-### Commands
+#### Commands ####
 
 * `mkdir` (make directory)
 * your editor of choice
 
-### Directory structure for the class
+#### Directory structure for the class ####
 
 Make a directory `PHY494` in your home directory for the class and
 inside it, one called `01_shell` for today's lesson:
@@ -372,13 +371,13 @@ Note:
 * Plain `mkdir` cannot create multiple directories deep in one go
   unless you have the `-p` option (check!).
 
-### Activity
+#### Activity ####
 
 1. Inside your `01_shell` directory, create three directories, `data`
    and `Documents/work`.
 2. Go to `Documents/work`
 
-### Creating text files with a text editor
+#### Creating text files with a text editor ####
 
 Run `nano` [^2]: 
 {% highlight bash %}
@@ -415,7 +414,7 @@ nano TODO
 {% endhighlight %}
 
 
-#### Activity: create a file with your editor
+##### Activity: create a file with your editor #####
 
 * Create a file `~/PHY494/Documents/work/lesson.txt` with three
   lessons from today:
@@ -433,7 +432,7 @@ nano TODO
 * Open the file again and add a 4th lesson regarding file editing.
 
 
-## Copy, rename, delete
+### Copy, rename, delete ###
 
 * `cp` (copy file, `cp -r` copy recursively, including directories)
 * `mv` (move, i.e. rename, also to another directory)
@@ -448,7 +447,7 @@ something, it is gone.** Be especially careful with `rm -r`.
 Note: all these commands can also work on multiple filenames.
 
 
-### Activity (optional)
+#### Activity (optional) ####
 
 This is a more extended exercise in using various shell commands. For
 today, this is optional, but you are encouraged to do it.
@@ -495,14 +494,14 @@ today, this is optional, but you are encouraged to do it.
 11. Remove the useless `work/notes` directory with `rm -r` (careful !)
 
 
-# Intermediate Level
+## Intermediate Level ##
 
 The following is very useful but for right now not essential and is
 optional. You can work through the tutorial in your own time.
 
-## Pipes and Filters
+### Pipes and Filters ###
 
-### Commands
+#### Commands ####
 
 * `cat`
 * `head`
@@ -520,7 +519,7 @@ and special shell characters
 * `>` (redirects output to a file)
 * `<` (redirects file to input)
 
-### Working with redirection and command pipelines
+#### Working with redirection and command pipelines ####
 
 Download [planets.dat]({{site.baseurl}}/{{site.data}}/planets.dat)[^3]
 and put it in the directory `data/`. You can do this with your web
@@ -573,7 +572,7 @@ cat planets.dat planets.dat > planets_2.dat
 (`cat` concatenates files and then you redirect it to a new file.)
 
 
-#### Activity
+##### Activity #####
 
 1. Test that `wc -l` gives just the number of lines ("60").
 2. What does `wc planets.dat planets_2.dat` do?
@@ -582,7 +581,7 @@ cat planets.dat planets.dat > planets_2.dat
    to terminate each line) and when you get bored, press `^D`
    (control+D). What happened?
 
-#### Pipes
+##### Pipes #####
 
 Sort by name and look at the first five using a **pipes** and
 **filters**:
@@ -617,7 +616,7 @@ Get the terrain types
 cut -b 29-  planets.dat
 {% endhighlight %}
 
-### Activity
+#### Activity ####
 
 1. Count the number of planets in `planets_2.dat`.
 2. Find planets where the rebel might have a base (hint: you know it's
@@ -629,7 +628,7 @@ cut -b 29-  planets.dat
    amongst these planets? (Hint: `uniq -c`)
 
 
-### Shell glob patterns
+#### Shell glob patterns ####
 
 Use the character `*` to match "any part of a file name", e.g.
 
@@ -783,7 +782,7 @@ Updated resources in /Users/oliver/PHY494-resources
 
 ------------------------------------------------------------
 
-#### Footnotes ####
+##### Footnotes #####
 
 [^1]:
 
