--- a/_posts/2017-01-16-02_HelloWorld.md
+++ b/_posts/2017-01-16-02_HelloWorld.md
@@ -11,7 +11,7 @@ mkdir ~/PHY494/02_python
 cd ~/PHY494/02_python
 {% endhighlight %}
 
-# Hello World
+## Hello World ##
 
 Using you favorite editor, create a text file named `hello.py` in the
 directory `~/PHY494/02_python`[^1] with the
@@ -30,7 +30,7 @@ Execute ("run") your `hello.py` program with the `python` program:
 python hello.py
 {% endhighlight %}
 
-# Python interpreter
+## Python interpreter ##
 
 [Python](https://www.python.org/) is an interpreted language; you can
 think of `python` reading each line in an input file and executing
@@ -55,14 +55,14 @@ Type commands and execute them with Enter.
 
 Like the shell, Python is a *REPL*, a "Read-eval-print-loop".
 
-## Activity: hello, line by line
+### Activity: hello, line by line ###
 
 Type the commands from `hello.py` into the interpreter, hitting Enter
 after every line, and execute your program step by step.
 
 Exit with `quit()` or `Ctrl + d`
 
-# Basic plotting
+## Basic plotting ##
 
 Create a file `motion.py` with content
 
@@ -97,7 +97,7 @@ You should create a graph similar to the following:
 
 ![Constant accelleration plot]({{site.baseurl}}/{{site.figs}}/motion.png)
 
-# Interactive Python with `ipython`
+## Interactive Python with `ipython` ##
 
 The [ipython](http://ipython.org) interpreter is like `python` but with
 *lots* of improvements such as `TAB`-completion, help with `command?`
