03: intro to python

--- a/_posts/2017-01-16-02_HelloWorld.md
+++ b/_posts/2017-01-16-02_HelloWorld.md
@@ -107,6 +107,28 @@ additional shell-like commands (so-called "magic" commands such as
 `%cd`, `%ls`, `%pwd`, `%run`, `%time` and `%timeit` --- see `%magic`
 for help).
 
+Start it with
+{% highlight bash %}
+ipython
+{% endhighlight %}
+
+It should look like
+
+~~~~~
+Python 3.5.2 |Anaconda 4.2.0 (x86_64)| (default, Jul  2 2016, 17:52:12)
+Type "copyright", "credits" or "license" for more information.
+
+IPython 5.1.0 -- An enhanced Interactive Python.
+?         -> Introduction and overview of IPython's features.
+%quickref -> Quick reference.
+help      -> Python's own help system.
+object?   -> Details about 'object', use 'object??' for extra details.
+
+In [1]:
+~~~~~
+
+where `In [1]:` is the prompt.
+
 To exit, give the `exit()` command or `^D` (`Control` + `D`).
 
 Just use `ipython` instead of `python` for interactive work.
