added SWC errors link

--- a/_posts/2017-01-19-4_Debugging_1.md
+++ b/_posts/2017-01-19-4_Debugging_1.md
@@ -140,6 +140,8 @@ print(values)
 
 ## More resources
 
+* Software Carpentry's lesson on
+  [Errors and Exceptions](http://swcarpentry.github.io/python-novice-inflammation/07-errors/)
 * [Testing](http://katyhuff.github.io/python-testing/) by Katy Huff
 * [Scipy lecture notes: Debugging](http://www.scipy-lectures.org/advanced/debugging/)
   by Gaël Varoquaux (advanced level)
