changed order of Git and Debugging

--- a/_posts/2017-01-24-05_Debugging.md
+++ b/_posts/2017-01-24-05_Debugging.md
@@ -1,16 +1,27 @@
 ---
 layout: post
-title: 04 Debugging Primer
+title: 05 Debugging Primer
 ---
 
-Code contains errors (also known as **bugs**).
+Code contains errors (also known as
+**[bugs](https://en.wikipedia.org/wiki/Software_bug)** --- literally
+the first bug was a moth stuck in an electromechanical relay of the
+Mark II).
+
+![The first bug: A page from the Harvard Mark II electromechanical computer's log, featuring a dead moth that was removed from the device. Courtesy of the Naval Surface Warfare Center, Dahlgren, VA., 1988. - U.S. Naval Historical. (Image is in the Public Domain)](https://upload.wikimedia.org/wikipedia/commons/8/8a/H96566k.jpg)
+
+Bugs can be
 
 * [syntax and language errors](#syntax-and-language) (easy, relatively
   speaking) and errors that raise exceptions under certain conditions
 * [logic errors](#logic-errors), corner cases, [edge cases](#edge-cases) (hard)
 
-Work through this page and then see [More Resources](#more-resources)
-at the end for more advanced material.
+Here we provide an introduction to the absolutely necessary business
+of identifying and fixing ("squashing") software bugs. Work through
+this page and then see [More Resources](#more-resources) at the end
+for more advanced material. Bug-hunting can be difficult and tedious
+but you have to do it --- code that produces wrong results is useless.
+
 
 ## General strategy
 
