debugging: added IndexError example from http://swcarpentry.github.io/python-novice-inflammation/07-errors/

--- a/_posts/2017-01-24-05_Debugging.md
+++ b/_posts/2017-01-24-05_Debugging.md
@@ -88,6 +88,15 @@ def sinc(x):
 print(sinc(3.145))
 {% endhighlight %}
 
+### Index Errors
+A common problem is getting the indexing wrong.
+
+Show that my favorite season in Arizona is winter:
+
+{% highlight python %}
+seasons = ['Spring', 'Summer', 'Fall', 'Winter']
+print('My favorite season is ', seasons[4])
+{% endhighlight %}
 
 ### Edge cases
 
