--- a/_posts/2017-01-24-05_Debugging.md
+++ b/_posts/2017-01-24-05_Debugging.md
@@ -88,8 +88,14 @@ def sinc(x):
 print(sinc(3.145))
 {% endhighlight %}
 
-### Index Errors
-A common problem is getting the indexing wrong.
+### Slicing and list building
+
+A common problem is getting the indexing wrong, resulting in
+`IndexError` or subtle errors in the lists themselves. If faced with
+slicing problems, try to build and slice lists interactively in
+`ipython` and then transfer the working slice recipe to your code. You
+sometimes may want to create a simpler or shorter list for testing.
+
 
 Show that my favorite season in Arizona is winter:
 
@@ -98,7 +104,21 @@ seasons = ['Spring', 'Summer', 'Fall', 'Winter']
 print('My favorite season is ', seasons[4])
 {% endhighlight %}
 
+
+Create a list of values -10, -9.8, -9.6, ..., -0.2, 0, 0.2, ..., 10.
+
+{% highlight python %}
+h = 0.2
+x = [-10 + i*h for i in range(100)]
+{% endhighlight %}
+
+
 ### Edge cases
+
+*Edge cases* occur at the boundaries of the allowed range of input;
+typically, you have to test them explicitly. (*Corner cases* occur
+when multiple edge cases come together.)
+
 
 The sinc function is defined for all real numbers
 {% highlight python %}
@@ -115,26 +135,30 @@ but this implementation is incomplete.
 3. BONUS: plot `sinc(x)` for values from -10 to 10 in steps of 0.2. 
 
 
-Slicing and list building (Hint: prototype...). Create a list of
-values -10, -9.8, -9.6, ..., -0.2, 0, 0.2, ..., 10.
-{% highlight python %}
-h = 0.2
-x = [-10 + i*h for i in range(100)]
-{% endhighlight %}
-
 
 ### Logic errors
 
-Create a list of squares of the first 20 natural numbers (1,
-2, ..., 20) [^2]:
+*Logic errors* tend to be the worst because your code runs and might
+even produce output that looks roughly correct even though it is
+wrong. You find logic errors by having a good understanding of what
+your code should produce for a given input and then trying different
+inputs and following the input through the code.
+
+
+Create a list of squares of the first 10 natural numbers (0, 1,
+2, ..., 10) and print their sum [^2]:
 {% highlight python %}
 squares = []
-for n in range(1, 20):
+s = 0
+for n in range(1, 10):
+   squares.append(s)
    s = n*n
    print(n, s)
 
-squares.append(s)
-print("Done")
+sum_s = sum(squares)
+print("sum of squares", sum_s)
+
+# result should be 385
 {% endhighlight %}
 
 
